--- a/backupninja/map.jinja
+++ b/backupninja/map.jinja
@@ -17,7 +17,8 @@ that differ from whats in defaults.yaml
           'configfile': '/usr/local/etc/backupninja.conf',
           'config': {
             'configdirectory': '/usr/local/etc/backup.d',
-          }
+          },
+          'executable': '/usr/local/sbin/backupninja',
         },
   }
   , grain="os_family"
